[package]
name = "typst-package-check"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
casbab = "0.1.1"
chrono = "0.4.38"
codespan-reporting = "0.11.1"
comemo = "0.4.0"
dirs = "5.0.1"
dotenvy = "0.15.7"
eyre = "0.6.12"
flate2 = "1.0.28"
fontdb = "0.20.0"
hmac = "0.12.1"
ignore = "0.4.22"
jwt-simple = { version = "0.12.9", default-features = false, features = [
    "pure-rust",
] }
parking_lot = "0.12.1"
pathdiff = "0.2.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha1 = "0.10.6"
spdx = "0.10"
stringcase = "0.2.1"
tar = "0.4.40"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "process", "fs"] }
toml_edit = "0.22.12"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
typst = "0.13.1"
typst-assets = { version = "0.13.1", features = [ "fonts" ] }
typst-eval = "0.13.1"
wasm-opt = "0.116.1"
