[package]
name = "typst-package-check"
version = "0.4.0"
edition = "2021"

[dependencies]
casbab = "0.1.1"
chrono = "0.4.38"
clap = { version= "4.5.40", features = ["derive"] }
codespan-reporting = "0.12.0"
comemo = "0.4.0"
comrak = { version = "0.43.0", default-features = false }
dirs = "6.0.0"
dotenvy = "0.15.7"
flate2 = "1.0.28"
fontdb = "0.23.0"
hmac = "0.12.1"
ignore = "0.4.22"
jwt-simple = { version = "0.12.9", default-features = false, features = [
    "pure-rust",
] }
parking_lot = "0.12.1"
pathdiff = "0.2.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha1 = "0.10.6"
spdx = "0.12"
stringcase = "0.4"
tar = "0.4.40"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "process", "fs", "macros"] }
toml_edit = "0.23"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
typst = "0.13.1"
typst-assets = { version = "0.13.1", features = [ "fonts" ] }
typst-eval = "0.13.1"
wasm-opt = "0.116.1"
