[package]
name = "typst-package-check"
version = "0.4.2"
edition = "2021"

[dependencies]
casbab = "0.1.1"
chrono = "0.4"
clap = { version= "4.5", features = ["derive"] }
codespan-reporting = "0.13.1"
comemo = "0.5.0"
comrak = { version = "0.49.0", default-features = false }
dirs = "6.0.0"
dotenvy = "0.15.7"
fontdb = "0.23.0"
ignore = "0.4.25"
jwt-simple = { version = "0.12", default-features = false, features = [
    "pure-rust",
] }
parking_lot = "0.12.5"
pathdiff = "0.2.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spdx = "0.13"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "process", "fs", "macros"] }
toml_edit = "0.23"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
# NOTE: Update this along with the output of `Commands::TypstVersion`
typst = "0.14.2"
typst-assets = { version = "0.14.2", features = [ "fonts" ] }
typst-eval = "0.14.2"
wasm-opt = "0.116.1"
